Evita criar tarefas com respostas aos e-mails Verifica se a tarefa já está relacionada a um e-mail na base de dados local

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,15 @@
 version: "3"
 
 services:
-  node:
-    image: node:lts-slim
-    working_dir: /app
-    env_file: .env
-    command: bash -c "npm install -g nodemon && npm ci && nodemon index.js"
-    ports:
-      - 80:80
-    volumes:
-      - "./:/app"
+    node:
+        image: node:lts-slim
+        deploy:
+            restart_policy:
+                condition: on-failure
+        working_dir: /app
+        env_file: .env
+        command: bash -c "npm install -g nodemon && npm ci && nodemon index.js"
+        ports:
+            - 80:80
+        volumes:
+            - "./:/app"
