--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
         "axios": "^0.21.4",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "flatted": "^3.2.2",
         "fs": "0.0.1-security",
         "moment": "^2.29.1",
-        "node-html-markdown": "^1.1.2"
+        "node-html-markdown": "^1.1.2",
+        "sequelize": "^6.6.5",
+        "sqlite3": "^5.0.2"
     }
 }
