Trata melhor os erros

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
                 condition: on-failure
         working_dir: /app
         env_file: .env
-        command: bash -c "npm install -g nodemon && npm ci && nodemon index.js"
         ports:
             - 80:80
+        command: bash -c "npm run dev"
         volumes:
             - "./:/app"
