--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
+        "serve": "node index.js",
+        "dev": "nodemon --trace-warnings index.test.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": {
@@ -18,19 +20,27 @@
     "license": "ISC",
     "nodemonConfig": {
         "ignore": [
-            "*.json",
+            "debug/*",
+            "error/*",
+            "success/*",
             "*.md"
         ]
     },
     "dependencies": {
         "axios": "^0.21.4",
         "body-parser": "^1.19.0",
+        "debug": "^4.3.2",
         "express": "^4.17.1",
         "flatted": "^3.2.2",
         "fs": "0.0.1-security",
         "moment": "^2.29.1",
         "node-html-markdown": "^1.1.2",
         "sequelize": "^6.6.5",
-        "sqlite3": "^5.0.2"
+        "sqlite3": "^5.0.2",
+        "supports-color": "^9.0.2"
+    },
+    "devDependencies": {
+        "glob": "^7.2.0",
+        "nodemon": "^2.0.13"
     }
 }
