--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
         env_file: .env
         ports:
             - 80:80
-        command: bash -c "npm run dev"
+        command: bash -c "npm run serve"
         volumes:
             - "./:/app"
