--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     node:
-        image: node:lts-slim
+        image: node:current
         deploy:
             restart_policy:
                 condition: on-failure
@@ -10,6 +10,7 @@ services:
         env_file: .env
         ports:
             - 80:80
-        command: bash -c "npm run serve"
+        command: bash -c "npm run dev"
+        # command: bash -c "npm run serve"
         volumes:
             - "./:/app"
