--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "serve": "node index.js",
-        "dev": "nodemon --trace-warnings index.test.js",
+        "dev": "nodemon --trace-warnings index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": {
